<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bj_hint"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/dialog_hint_text_context"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:lineSpacingMultiplier="1.3"
                android:text="@string/dialog_tips_exit"
                android:textColor="#666"
                android:textSize="15dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/window_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialoh_hint_text_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/dialog_tips_exit_cancel"
                android:textColor="#666"
                android:textSize="15dp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/window_gray" />

            <TextView
                android:id="@+id/dialog_hint_text_yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/dialog_tips_exit_confirm"
                android:textColor="#666"
                android:textSize="15dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
