<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:openDrawer="start">

    <!--<include-->
    <!--android:visibility="gone"-->
    <!--layout="@layout/app_bar_single_home"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content" />-->

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#fff"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <RelativeLayout
            android:layout_width="404dp"
            android:layout_height="39dp"
            android:layout_gravity="center"
            android:background="@drawable/bar_search_bg"
            android:elevation="8dp"
            android:padding="4dp">

            <ImageView
                android:id="@+id/bar_iv_search"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="@dimen/activity_vertical_margin"
                android:src="@mipmap/bar_et_search" />

            <EditText
                android:id="@+id/bar_et_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/bar_iv_search"
                android:background="@null"
                android:hint="@string/bar_search_hint"
                android:inputType="text"
                android:textSize="@dimen/sp_14"
                tools:ignore="Autofill" />
        </RelativeLayout>
    </androidx.appcompat.widget.Toolbar>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:openDrawer="start">

        <!--<com.google.android.material.navigation.NavigationView-->
        <!--android:id="@+id/nav_view"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_gravity="start"-->
        <!--android:fitsSystemWindows="false"-->
        <!--app:headerLayout="@layout/nav_header_single_home"-->
        <!--app:menu="@menu/activity_single_home_drawer" />-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="404dp"
                android:layout_height="18.8dp"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/home_label_ybp"
                    android:textColor="#0E5DA1"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/home_label_jcfx"
                    android:textColor="#cccccc"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/home_label_yjld"
                    android:textColor="#cccccc"
                    android:textSize="12sp" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/home_label_sjyzh"
                    android:textColor="#cccccc"
                    android:textSize="12sp" />
            </LinearLayout>
            <FrameLayout
                android:layout_weight="1"
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="0dp"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/nav_view"
            android:layout_width="282dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#0B1C35"
            android:fitsSystemWindows="false"
            android:padding="16dp">

            <ImageView
                android:id="@+id/nav_iv_logo"
                android:layout_width="37dp"
                android:layout_height="37dp"
                android:src="@mipmap/ic_launcher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/nav_iv_logo"
                android:textColor="#2893B4"
                android:textSize="@dimen/text_size_20"
                tools:text="龙岗LOGO" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/nav_rv_menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/nav_iv_logo"
                android:layout_marginTop="@dimen/activity_vertical_margin" />

        </RelativeLayout>




    </androidx.drawerlayout.widget.DrawerLayout>


</LinearLayout>



